<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Weather Forecasts</string>

    <!-- Title of the SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Used to open Settings Menu from MainActivity and DetailActivity -->
    <string name="action_settings">Settings</string>

    <!-- - - - - - - - - - - - - - - - -
      - Secondary weather info labels   -
      - - - - - - - - - - - - - - - - - -->
    <string name="wind_label">Wind</string>
    <string name="pressure_label">Pressure</string>
    <string name="humidity_label">Humidity</string>

    <!-- - - - - - - - - - - - - - - - -
      - Preference Labels              -
      - - - - - - - - - - - - - - - - - -->
    <string name="pref_location_label">الموقع</string>
    <string name="pref_units_label">وحدة قياس الحرارة</string>
    <string name="pref_units_label_metric">النظام المتري</string>
    <string name="pref_units_label_imperial">النظام الامبراطوري</string>

    <!-- - - - - - - - - - - - - - - - -
      - Used by WeatherUtils           -
      - - - - - - - - - - - - - - - - -->

    <!-- HighLow Temperature format -->
    <string name="high_low_temperature">
        <xliff:g id="high_temp">%1$1.0f</xliff:g>\u00B0 /
        <xliff:g id="low_temp">%2$1.0f</xliff:g>\u00B0
    </string>

    <!-- Temperature format -->
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Wind in kph -->
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in mph -->
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format -->
    <string name="format_pressure">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <!-- Humidity format -->
    <string name="format_humidity">
        <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>

    <!-- - - - - - - - - - - - - - - - -
      - Wind Directions                -
      - - - - - - - - - - - - - - - - -->
    <string name="unknown_direction">Unk. Dir.</string>
    <string name="north">N</string>
    <string name="east">E</string>
    <string name="west">W</string>
    <string name="south">S</string>
    <string name="north_east">NE</string>
    <string name="south_east">SE</string>
    <string name="north_west">NW</string>
    <string name="south_west">NE</string>

    <!-- - - - - - - - - - - - - - -
      - Used by CustomDateUtils          -
      - - - - - - - - - - - - - - -->

    <!-- For labelling today -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow -->
    <string name="tomorrow">Tomorrow</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
      - Used for Accessibility purposes                     -
      - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="access_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="access_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="access_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="access_high_low_temp">High: <xliff:g id="hight">%1$f</xliff:g> / Low: <xliff:g id="low">%2$f</xliff:g></string>
    <string name="access_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="access_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="access_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>

    <!-- - - - - - - - - - - - - -
    - Untranslatable             -
    - - - - - - - - - - - - - - -->

    <!-- OpenWeatherMap API Key -->
    <string name="api_key" translatable="false">ae5e7114f7eec266797a8c8a796c5144</string>

    <!-- Key name for storing location in SharedPreferences -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference -->
    <string name="pref_location_default" translatable="false">State of Kuwait</string>

    <!-- Key name for temperature unit preference in SharedPreferences -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

</resources>
